Solving the issues number #1
footer info add

--- a/img/index.html
+++ b/img/index.html
@@ -169,7 +169,7 @@
             <h1>contact Details</h1>
             <h2>spaicy King Resturent</h2>
             <i>20/3west panthapath</i>
-            <h3>Phpne:+8801724720068</h3>
+            <h3>Phone:+8801724720068</h3>
             <h3>Opening time</h3>
             <i>5pm to 11pm</i>
           </div>
